--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<header>
 			<div class="navbar-fixed">
-				<ul id="dropdown1" class="dropdown-content">
+				<ul id="dropdown1" class="dropdown-content" style="">
 					<li><a href="#">Statistics</a></li>
 					<li><a href="#">Inquiry Submission</a></li>
 					<li><a href="#">Contact Us</a></li>
@@ -27,21 +27,20 @@
 						<ul id="nav-mobile" class="right hide-on-med-and-down">
 							<li><a class="dropdown-button" href="#" data-activates="dropdown1">Menu</a></li>
 						</ul>
-						<form class="col s4 right">
+						<form class="col s6 offset-s3">
 							<div class="input-field">
 								<input id="search" type="search" required>
 								<label for="search"><i class="mdi-action-search"></i></label>
 								<i class="mdi-navigation-close"></i>
 							</div>
 						</form>
-							
-							<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-							<ul class="side-nav" id="mobile-demo">
+						<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+						<ul class="side-nav" id="mobile-demo">
 							<li><a href="#">Sass</a></li>
 							<li><a href="#">Components</a></li>
 							<li><a href="#">Javascript</a></li>
 							<li><a href="#">Mobile</a></li>
-							</ul>
+						</ul>
 					</div>
 				</nav>
 			</div>
@@ -57,7 +56,7 @@
 			</div>
 			<div>
 				<ul class="tabs">
-					<li class="tab col s4"><a href="#general-tab">Search</a></li>
+					<li class="tab col s4"><a href="#general-tab">Factor Search</a></li>
 					<li class="tab col s4"><a href="#keyword-tab">Keyword Search</a></li>
 					<li class="tab col s4"><a href="#publication-tab">Publications View</a></li>
 				</ul>
